# rag

./: .dockerignore  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_INSTRUCTIONS.md  CLAUDE.md  CONFIG_ARCHITECTURE.md  IMPROVEMENTS.md  INTELLIGENT_WEB_PLATFORM.md  LEARNING_NOTES.md  Makefile  PLAN_TOKEN_TRACKING.md  README-Docker.md  README.md  SETUP_LOCAL.md  TEST_MIGRATION_STRATEGY.md  TODO_FUTURE.md  WEB_INTERFACE_PLAN.md  clear_data.py  currency-conversion-implementation.md  debug_ollama.py  debug_rag_context.py  demo_queries.py  docker-compose.yml  extract_all_mocks.sh  extract_eur_amounts.py  final_demo.py  format_code.py  interactive_test.py  manage-services.sh  msg.md  multitenant_validation_report.json  nginx.conf  ngrok-tunnel.sh  prompt.md  pytest.ini  python_test_runner.py  quick_test.py  (+17 more)
.claude/: settings.local.json
services/rag-service/: .dockerignore  .env.example  .flake8  COMPREHENSIVE_DEPENDENCY_ANALYSIS.md  COMPREHENSIVE_TESTABILITY_REPORT.md  DEPENDENCY_ANALYSIS.md  DEPENDENCY_INJECTION_ISSUES.md  DEPENDENCY_INJECTION_MIGRATION.md  DEPENDENCY_VISUALIZATION.md  DOCKER_SETUP.md  Dockerfile  IMPLEMENTATION_PLAN.md  INCOMPLETE_FEATURES.md  README.md  README_MACOS_M4.md  TEST_PROGRESS_SUMMARY.md  UNIVERSAL_LLM_IMPLEMENTATION_GUIDE.md  categorization_report_en.json  categorization_report_hr.json  chat_api.py  cleanup_hardcoded_defaults.py  debug_openrouter.json  debug_openrouter_fixed.json  debug_sliding_window.py  dependency_analyzer.py  docker-compose.dev.yml  docker-compose.yml  extract_actual_schema.py  extract_mocks_to_conftest.py  format_code.py  llm_provider_language_control_analysis.json  pyproject.toml  pyproject.toml.m4  rag.py  rag_macos_m4_setup.sh  rag_ubuntu_setup.sh  remove_language_hardcodes.py  remove_mocks_from_production.py  requirements.txt  simplified_schema_extract.py  (+16 more)
services/rag-service/config/: config.toml  croatian.toml  docker.toml  en.toml  english.toml  hr.toml  logging_examples.toml
services/rag-service/docs/: 2025-09-23_incremental_build_roadmap_simple_to_advanced.md  2025-09-23_modern_typescript_python_integration_architecture.md  2025-09-23_multi_source_query_routing_enhancement.md  2025-09-23_tri_language_architecture_elixir_typescript_python.md  2025-09-25_web-api-specification.md  PERFORMANCE_ANALYSIS_NARODNE_NOVINE.md  SUPABASE_SETUP.md  chat-api-specification.md  hybrid_elixir_python_architecture.md  multi-tenant-chat-api-design.md  persistent_service_architecture.md  phased_development_strategy.md
services/rag-service/notebooks/: 02_vector_database_learning.ipynb  README.md
services/rag-service/schema/: multitenant_schema.surql
services/rag-service/scripts/: analyze_nn_stats.py  batch_process.py  complete_supabase_schema.sql  create_supabase_tables.py  extract_config_schema.py  process_nn_incremental.py  setup_supabase_chat.py  validate_language_configs.py  verify_supabase_setup.py
services/rag-service/src/chat/: __init__.py  chat_persistence.py  chat_service.py  exceptions.py  rag_integration.py
services/rag-service/src/cli/: __init__.py  rag_cli.py  rag_cli_legacy.py
services/rag-service/src/database/: __init__.py  factory.py  protocols.py
services/rag-service/src/extraction/: nn_metadata_extractor.py
services/rag-service/src/generation/: enhanced_prompt_templates.py  enhanced_prompt_templates_legacy.py  enhanced_prompt_templates_providers.py  http_clients.py  language_providers.py  llm_provider.py  ollama_client.py  ollama_client_legacy.py  prompt_templates.py  prompt_templates_legacy.py  response_parser.py  response_parser_legacy.py
services/rag-service/src/models/: multitenant_models.py
services/rag-service/src/pipeline/: config.py  rag_system.py  rag_system_legacy.py
services/rag-service/src/preprocessing/: __init__.py  batch_processor.py  chunkers.py  chunkers_legacy.py  cleaners.py  cleaners_legacy.py  cleaners_providers.py  enhanced_chunking.py  extractors.py  extractors_providers.py  extractors_working_backup.py
services/rag-service/src/query/: query_classifier.py
services/rag-service/src/retrieval/: categorization.py  categorization_legacy.py  categorization_providers.py  hierarchical_retriever.py  hierarchical_retriever_legacy.py  hierarchical_retriever_providers.py  hybrid_retriever.py  hybrid_retriever_legacy.py  query_processor.py  query_processor_legacy.py  query_processor_providers.py  ranker.py  ranker_legacy.py  ranker_providers.py  reranker.py  reranker_legacy.py  retriever.py  retriever_legacy.py
services/rag-service/src/utils/: config_loader.py  config_models.py  config_protocol.py  config_validator.py  error_handler.py  factories.py  folder_manager.py  folder_manager.py.backup  folder_manager_legacy.py  folder_manager_providers.py  json_logging.py  json_utils.py  language_manager.py  language_manager_legacy.py  language_manager_providers.py  logging_config.py  logging_factory.py  multitenant_models.py  ocr_correction.py
services/rag-service/tests/: __init__.py  ai_debug_helpers.py  conftest.py  conftest.py.backup_before_consolidation  conftest_consolidated.py  conftest_consolidated_v2.py  conftest_consolidation_summary.txt  test_categorization.py  test_categorization_providers.py  test_categorization_providers_v2.py  test_chunkers.py  test_cleaners.py  test_cleaners_providers.py  test_config_loader.py  test_config_models.py  test_config_protocol.py  test_config_protocol_v2.py  test_config_validator.py  test_database_providers.py  test_embedding_devices.py  test_embedding_loaders.py  test_embeddings.py  test_enhanced_prompt_templates.py  test_enhanced_prompt_templates_providers.py  test_error_handler.py  test_extractors.py  test_extractors_providers.py  test_folder_manager.py  test_folder_manager_providers.py  test_hierarchical_retriever.py  test_hierarchical_retriever_providers.py  test_hierarchical_retriever_providers_v2.py  test_http_clients.py  test_hybrid_retriever.py  test_language_manager.py  test_language_manager_providers.py  test_language_providers.py  test_multitenant_models.py  test_ocr_correction.py  test_ollama_client.py  (+25 more)
(+264 files in other folders)
