[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | temp_cache
  | data
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["src"]
src_paths = ["src", "tests"]

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
    "E501",  # line too long (handled by black)
    "F401",  # imported but unused (common in __init__.py files)
    "F841",  # local variable assigned but never used (common in tests)
    "W291",  # trailing whitespace (handled by pre-commit)
    "W293",  # blank line contains whitespace (handled by pre-commit)
    "E402",  # module level import not at top (common in test setup)
    "F541"   # f-string missing placeholders (sometimes intentional)
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".tox",
    ".venv",
    "temp_cache",
    "data"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
